Implementada a melhoria e funcionalidade Web Application Scanner
